testsuite/bsc.evaluator/dynamic/errors/ERulesMux3.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling ERulesMux3.bsv
code generation for sysERulesMux3 starts
Error: "ERulesMux3.bsv", line 20, column 16: (G0069)
  The expression for a rule or rules could not be evaluated. Rules must be
  determined at compile time and cannot be computed dynamically.
  During elaboration of `sysERulesMux3' at "ERulesMux3.bsv", line 2, column 8.
